# libzeropool-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  package.json  rustfmt.toml
.github/workflows/: check_and_test.yml
libs/kvdb-persy/: Cargo.toml  test.persy
libs/kvdb-persy/src/: lib.rs
libs/kvdb-web/: Cargo.toml
libs/kvdb-web/src/: error.rs  indexed_db.rs  lib.rs
libs/kvdb-web/tests/: indexed_db.rs
libzeropool-rs/: Cargo.toml  README.md
libzeropool-rs-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
libzeropool-rs-node/src/: helpers.rs  keys.rs  lib.rs  merkle.rs  params.rs  proof.rs  storage.rs  tx.rs
libzeropool-rs-wasm/: Cargo.toml  README.md
libzeropool-rs-wasm/scripts/: build  clean  publish
libzeropool-rs-wasm/src/: database.rs  helpers.rs  keys.rs  lib.rs  params.rs  proof.rs  state.rs  ts_types.rs  utils.rs
libzeropool-rs-wasm/src/client/: mod.rs  tx_parser.rs  tx_types.rs
libzeropool-rs-wasm/tests/: web.rs
libzeropool-rs/benches/: prove.rs
libzeropool-rs/src/: address.rs  client.rs  delegated_deposit.rs  keys.rs  lib.rs  merkle.rs  proof.rs  proof_plonk.rs  random.rs  sparse_array.rs  state.rs  store.rs  utils.rs
libzeropool-rs/src/client/: mod.rs  state.rs
libzeropool-wasm/: Cargo.toml  README.md
libzeropool-wasm/scripts/: build
libzeropool-wasm/src/: address.rs  keys.rs  lib.rs  sparse_array.rs  state.rs  utils.rs
libzkbob-rs/: Cargo.toml  README.md
libzkbob-rs-node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
libzkbob-rs-node/src/: helpers.rs  lib.rs  merkle.rs  params.rs  proof.rs  storage.rs
libzkbob-rs-wasm/: Cargo.toml  README.md
libzkbob-rs-wasm/scripts/: build  publish
libzkbob-rs-wasm/src/: database.rs  helpers.rs  keys.rs  lib.rs  params.rs  proof.rs  state.rs  ts_types.rs
libzkbob-rs-wasm/src/client/: mod.rs  tx_parser.rs  tx_types.rs
libzkbob-rs-wasm/tests/: web.rs
libzkbob-rs/src/: address.rs  keys.rs  merkle.rs  proof.rs  sparse_array.rs
libzkbob-rs/src/client/: mod.rs  state.rs
pkg/: libzeropool_wasm.d.ts  libzeropool_wasm.js  libzeropool_wasm_bg.wasm  libzeropool_wasm_bg.wasm.d.ts
scripts/: build  publish
src/: address.rs  keys.rs  kv_storage.rs  lib.rs  merkle.rs  params.rs  proof.rs  random.rs  sparse_array.rs  state.rs  ts_types.rs  types.rs  utils.rs
tests/: web.rs
zeropool-client/: Cargo.toml
zeropool-client/src/: backend.rs  client.rs  lib.rs  proof.rs  relayer.rs  tx_parser.rs
zeropool-state/: Cargo.toml
zeropool-state/src/: keys.rs  proof.rs
zeropool-state/src/client/: state.rs
