[workspace]
members = [
    "libs/kvdb-web",
    "libs/kvdb-persy",
    "zeropool-state",
    "zeropool-client",
]

[patch.crates-io]
fawkes-crypto-bellman_ce = { git = "https://github.com/zeropoolnetwork/phase2-bn254.git", branch = "feature/rayon-support" }
#fawkes-crypto-bellman_ce = { git = "https://github.com/zkbob/phase2-bn254.git", branch = "multicore-wasm" }