[package]
name = "libzeropool-rs-node"
version = "0.1.3"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zeropoolnetwork/libzeropool-rs/"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libzeropool-rs = { path = "../libzeropool-rs", features = ["native"] }
neon = { version = "0.9", default-features = false, features = ["napi-6"] }
# FIXME: Using a random fork for now
neon-serde = { git = "https://github.com/brokad/neon-serde.git", rev = "0a168baf9e52b1ebe6bd4661d95efc1318d788d8" }
serde = "1.0.127"

