[package]
name = "libzeropool-rs-node"
version = "0.3.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zeropoolnetwork/libzeropool-rs/"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libzeropool-rs = { path = "../libzeropool-rs", version = "0.9.0", features = ["native", "multicore"] }
neon = { version = "0.10.0", default-features = false, features = ["channel-api", "napi-6", "promise-api"] }
neon-serde = { package = "neon-serde3", version = "0.10" }
rayon = "1.5.3"
serde = "1.0.136"

[features]
groth16 = ["libzeropool-rs/groth16"]
plonk = ["libzeropool-rs/plonk"]

