[package]
name = "libzeropool-rs"
description = "A higher level zeropool API"
version = "0.3.11"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zeropoolnetwork/libzeropool-rs/"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
libzeropool = { version = "0.5.3", default-features = false, features = ["in3out127"] }
getrandom = { version = "0.2.3" }
bs58 = "0.4.0"
kvdb = "0.9.0"
kvdb-web = { version = "0.9.0", optional = true }
borsh = "0.9.1"
base64 = "0.13.0"
byteorder = "1.4.3"
serde = "1.0.126"
sha3 = "0.10.0"
thiserror = "1.0.26"
kvdb-rocksdb = { version = "0.11.0", optional = true }
kvdb-memorydb = "0.9.0"

[dependencies.bellman]
version = "0.3.4"
package = "fawkes-crypto-bellman_ce"
default-features = false

[dev-dependencies]
test-case = "1.2.0"
rand = "0.8.4"
serde_json = "1.0.64"
criterion = "0.3"

[features]
web = ["getrandom/js", "kvdb-web"]
node = ["getrandom/js"]
native = ["kvdb-rocksdb"]
multicore = ["bellman/multicore"]

[profile.bench]
debug = true

[[bench]]
name = "prove"
harness = false
