[package]
name = "libzeropool-rs"
description = "A higher level zeropool API"
version = "0.9.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zeropoolnetwork/libzeropool-rs/"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
libzeropool = { git = "https://github.com/zeropoolnetwork/libzeropool.git", default-features = false, features = ["in3out127"],  branch = "feature/delegated-deposits-v2" }
getrandom = { version = "0.2.3" }
bs58 = "0.4.0"
kvdb-web = { path = "../libs/kvdb-web", package = "zp-kvdb-web", version = "0.12.0", optional = true }
borsh = "0.9.1"
base64 = "0.20.0"
byteorder = "1.4.3"
serde = "1.0.126"
sha3 = "0.10.0"
thiserror = "1.0.26"
kvdb = "0.13.0"
kvdb-memorydb = "0.13.0"
kvdb-persy = { path = "../libs/kvdb-persy", version = "0.1.0", optional = true }
smallvec = "1.10.0"
hex = { version = "0.4.3", features = ["serde"] }

[dependencies.bellman]
version = "0.3.4"
package = "fawkes-crypto-bellman_ce"
default-features = false

[dev-dependencies]
test-case = "1.2.0"
rand = "0.8.4"
serde_json = "1.0.64"
criterion = "0.3"

[features]
web = ["getrandom/js", "kvdb-web"]
node = ["getrandom/js"]
native = ["kvdb-persy"]
multicore = ["bellman/multicore"]

[profile.bench]
debug = true

[[bench]]
name = "prove"
harness = false
