[package]
name = "libzkbob-rs-node"
version = "0.1.23"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zkBob/libzkbob-rs/"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libzkbob-rs = { version = "0.3.9", features = ["native"] }
neon = { version = "0.9.0", default-features = false, features = ["napi-6"] }
# FIXME: Using a random fork for now
neon-serde = { git = "https://github.com/brokad/neon-serde.git", rev = "0a168baf9e52b1ebe6bd4661d95efc1318d788d8" }
serde = "1.0.136"

