[package]
name = "libzkbob-rs"
description = "A higher level zkBob API"
version = "0.3.15"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zkBob/libzkbob-rs/"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
libzeropool = { git = "https://github.com/zkBob/libzeropool", branch = "multicore-wasm", version = "0.5.6", default-features = false }
getrandom = { version = "0.2.3" }
bs58 = "0.4.0"
kvdb = "0.9.0"
kvdb-web = { version = "0.9.0", optional = true }
borsh = "0.9.1"
base64 = "0.13.0"
byteorder = "1.4.3"
serde = "1.0.126"
sha3 = "0.10.0"
thiserror = "1.0.26"
kvdb-rocksdb = { version = "0.11.0", optional = true }
kvdb-memorydb = "0.9.0"

[dev-dependencies]
test-case = "1.2.0"
rand = "0.8.4"
serde_json = "1.0.64"

[features]
web = ["getrandom/js", "kvdb-web"]
node = ["getrandom/js"]
native = ["kvdb-rocksdb"]
