[package]
name = "zeropool-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeropool-state = { path = "../zeropool-state" }
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.108"
thiserror = "1.0.50"
hex = { version = "0.4.3", features = ["serde"] }
rayon = "1.8.0"
byteorder = "1.5.0"
