[package]
name = "kvdb-persy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
hex = "0.4.3"
kvdb = "0.13.0"
parity-util-mem = "0.12.0"
persy = { version = "1.4.0", features = ["background_ops"] }
smallvec = "1.9.0"
