[package]
name = "kvdb-persy"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zeropoolnetwork/libzeropool-rs/"
license = "MIT OR Apache-2.0"
description = "kvdb implementation built with persy"

[dependencies]
hex = "0.4.3"
kvdb = "0.13.0"
parity-util-mem = "0.12.0"
persy = { version = "1.4.0", features = ["background_ops"] }

[dev-dependencies]
kvdb-shared-tests = "0.11.0"
